--- a/src/app/components/countries-list/countries-list.component.scss
+++ b/src/app/components/countries-list/countries-list.component.scss
@@ -12,14 +12,14 @@
 .card-country {
   cursor: pointer;
   padding: 10px;
-  margin-right: 10px;
+  // margin-right: 10px;
   margin-bottom: 10px;
-  left: 48px;
+  // left: 48px;
 }
 
 .card-text {
   font-size: 14px;
-}  
+}
 
 .languages {
   border: 1px solid #7474e4;
