--- a/src/app/components/countries-list/countries-list.component.html
+++ b/src/app/components/countries-list/countries-list.component.html
@@ -102,13 +102,14 @@
         </div>
     </div>
    </div>
-    <div class="col-lg-12">
-        <ngb-pagination [(page)]="page" [pageSize]="9" [collectionSize]="list.length" (pageChange)="setPage()"></ngb-pagination>
-    </div>
+
 </div>
 
 <div class="row">
-
+  <div class="col-lg-12">
+    <ngb-pagination [(page)]="page" [pageSize]="pageSize" [collectionSize]="list.length"
+    (pageChange)="setPage()" [maxSize]="7"></ngb-pagination>
+  </div>
 </div>
 
 <ng-template #content let-modal>
